--- a/fishfront/src/App.css
+++ b/fishfront/src/App.css
@@ -24,12 +24,25 @@ html {
   z-index: -1;
 }
 
-.search-container {
+.login-container {
   position: absolute;
-  top: 20px;
+  top: 18px;
   right: 20px;
   z-index: 2; /* 검색 컨테이너가 비디오 위에 표시되도록 */
-  background: rgba(0, 0, 0, 0.3);
+  background: transparent;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  transition: width 0.3s ease;
+}
+
+.search-container {
+  position: absolute;
+  top: 18px;
+  right: 80px;
+  z-index: 2; /* 검색 컨테이너가 비디오 위에 표시되도록 */
+  background: transparent;
   padding: 10px;
   border-radius: 5px;
   display: flex;
@@ -39,6 +52,7 @@ html {
 
 .search-container.open {
   width: 250px; /* 검색창이 열릴 때의 너비 */
+  transition: ease-in-out;
 }
 
 .search-container input[type="text"] {
@@ -51,12 +65,12 @@ html {
   flex: 1;
 }
 
-.search-container button {
+/* .search-container button {
   padding: 3px 5px;
   font-size: 16px;
   cursor: pointer;
   border: none;
-  background: #333;
+  background: transparent;
   color: white;
   border-radius: 0 3px 3px 0;
   outline: none;
@@ -64,14 +78,28 @@ html {
 
 .search-container button:hover {
   background: #555;
-}
+} */
 
 .search-icon {
-  font-size: 24px;
-  background: none;
-  border: none;
-  color: white;
-  cursor: pointer;
+  width: 25px; /* 버튼의 너비 */
+  height: 25px; /* 버튼의 높이 */
+  background-image: url("C:/Users/tj/Desktop/4차프로젝트/fishfront/src/images/search_icon.png"); /* 이미지 파일 경로 */
+  background-size: cover; /* 이미지를 버튼 크기에 맞게 조정 */
+  background-repeat: no-repeat; /* 이미지 반복 없음 */
+  background-color: transparent;
+  border: none; /* 테두리 없음 */
+  cursor: pointer; /* 마우스 포인터를 올렸을 때 포인터로 변경 */
+}
+
+.login-icon {
+  width: 25px; /* 버튼의 너비 */
+  height: 25px; /* 버튼의 높이 */
+  background-image: url("C:/Users/tj/Desktop/4차프로젝트/fishfront/src/images/login_icon.png"); /* 이미지 파일 경로 */
+  background-size: cover; /* 이미지를 버튼 크기에 맞게 조정 */
+  background-repeat: no-repeat; /* 이미지 반복 없음 */
+  background-color: transparent;
+  border: none; /* 테두리 없음 */
+  cursor: pointer; /* 마우스 포인터를 올렸을 때 포인터로 변경 */
 }
 
 .menu-button {
