--- a/fishfront/src/App.css
+++ b/fishfront/src/App.css
@@ -27,9 +27,10 @@ html {
 .login-container {
   position: absolute;
   top: 18px;
-  right: 20px;
+  right: 50px;
   z-index: 2; /* 검색 컨테이너가 비디오 위에 표시되도록 */
-  background: transparent;
+  background-color: rgba(0, 0, 0, 0.5); /* 배경색 조정 */
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
   padding: 10px;
   border-radius: 5px;
   display: flex;
@@ -40,9 +41,10 @@ html {
 .search-container {
   position: absolute;
   top: 18px;
-  right: 80px;
+  right: 100px;
   z-index: 2; /* 검색 컨테이너가 비디오 위에 표시되도록 */
-  background: transparent;
+  background-color: rgba(0, 0, 0, 0.5); /* 배경색 조정 */
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
   padding: 10px;
   border-radius: 5px;
   display: flex;
@@ -61,24 +63,10 @@ html {
   border: none;
   border-radius: 3px 0 0 3px;
   outline: none;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.1);
   flex: 1;
-}
-
-/* .search-container button {
-  padding: 3px 5px;
-  font-size: 16px;
-  cursor: pointer;
-  border: none;
-  background: transparent;
   color: white;
-  border-radius: 0 3px 3px 0;
-  outline: none;
 }
-
-.search-container button:hover {
-  background: #555;
-} */
 
 .search-icon {
   width: 25px; /* 버튼의 너비 */
@@ -89,6 +77,10 @@ html {
   background-color: transparent;
   border: none; /* 테두리 없음 */
   cursor: pointer; /* 마우스 포인터를 올렸을 때 포인터로 변경 */
+}
+
+.search-container.open .search-icon {
+  display: none; /* 검색창이 열릴 때 돋보기 아이콘 숨김 */
 }
 
 .login-icon {
@@ -121,7 +113,7 @@ html {
   left: -250px; /* 메뉴바의 초기 위치 조정 */
   width: 250px; /* 메뉴바의 크기 넓힘 */
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.9); /* 배경색 조정 */
+  background-color: rgba(0, 0, 0, 1); /* 배경색 조정 */
   transition: left 0.3s ease; /* 애니메이션 효과 */
   z-index: 999; /* 메뉴가 비디오 위에 표시되도록 */
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
